--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ footer aside {
 .hero {
   width: 100%;
   height: 300px;
-  background-image: url(/img/hero.png);
+  background-image: url(../img/hero.png);
   background-position: center;
   background-size: cover;
   display: flex;
@@ -141,7 +141,7 @@ footer aside {
 .hero-other {
   width: 100%;
   height: 300px;
-  background-image: url(/img/other.png);
+  background-image: url(../img/other.png);
   background-position: center;
   background-size: cover;
   display: flex;
