shopping badge added

--- a/css/style.css
+++ b/css/style.css
@@ -738,8 +738,6 @@ form {
   margin: 0 10%;
 }
 
-
-
 .terms section {
   width: 100%;
   padding: 10px 0;
@@ -760,3 +758,26 @@ form {
   padding:5px;
 }
 /* TERMS AND SRERVICE END */
+
+/* NAV  START*/
+.navCart { 
+  position: relative;
+}
+
+.navCart i{
+font-size: 25px;
+}
+
+.navCartNum {
+  position: absolute;
+  right: 35%;
+  top: 42%;
+  width: 17px;
+  height: 17px;
+  font-size: 11px;
+  border-radius: 9px;
+  background: #ae6e62;
+  color: #fff;
+}
+/* NAV END*/
+
