--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ footer aside {
 }
 
 .item {
+  max-width: 20%;
+  font-size: 0.8em;
   display: flex;
   flex-direction: column;
   justify-content: center;
