--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,26 @@ main {
 h2 {
   font-size: 30px;
   margin: 20px 0;
+  color: #333;
 }
+
+h3 {
+  color: #555;
+}
+
+p {
+  color: #555;
+}
+
+div > .ng-binding{
+  color: #555;
+  font-weight: 500;
+}
+
+li {
+  color: #555;
+}
+
 
 /* FOOTER START */
 footer {
@@ -114,6 +133,10 @@ footer aside {
   color: #fff;
 }
 
+.hero h2 {
+  color: #fff;
+}
+
 .hero-wine {
   width: 100%;
   height: 300px;
@@ -124,6 +147,10 @@ footer aside {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #fff;
+}
+
+.hero-wine h2 {
   color: #fff;
 }
 
@@ -140,6 +167,10 @@ footer aside {
   color: #fff;
 }
 
+.hero-beer h2 {
+  color: #fff;
+}
+
 .hero-other {
   width: 100%;
   height: 300px;
@@ -153,6 +184,10 @@ footer aside {
   color: #fff;
 }
 
+.hero-other h2 {
+  color: #fff;
+}
+
 .hero-sake {
   width: 100%;
   height: 300px;
@@ -163,6 +198,10 @@ footer aside {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #fff;
+}
+
+.hero-sake h2 {
   color: #fff;
 }
 
